# sculpter

./: Cargo.toml  flake.nix  pseudo-code
_src/: buffers.rs  lib.rs  node.rs  pipeline.rs
assets/_shaders/: compact_vertices.wgsl  generate_vertices.wgsl
assets/shaders/: compact_faces.wgsl  generate_faces.wgsl  generate_vertices.wgsl  prefix_sum.wgsl
examples/: basic.rs
src/: bind_group.rs  buffers.rs  cpu_data.rs  lib.rs  mesh.rs  node.rs  pipeline.rs  readback.rs
